deploy/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-studio-development/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-studioDevelopment
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-studio-development
    sas.com/admin: namespace
  name: sas-studio-development
spec:
  host: $(INGRESS_HOST)
  path: /studioDevelopment
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-studio-development
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-studioDevelopment
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-studio-development
    sas.com/admin: namespace
  name: sas-studio-development-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /studioDevelopment
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-studio-development
  wildcardPolicy: Subdomain
